# hassha

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  LICENSE  MELODIES.md  README.md  install.sh
.claude-plugin/: config.example.toml  config.schema.json  marketplace.json  plugin.json
.opencode/: package-lock.json  package.json
.opencode/plugins/: hassha.ts
hooks/: hooks.json
src/: cache.rs  cli.rs  config.rs  history.rs  hook.rs  install.rs  main.rs  melodies.rs  player.rs
