[package]
name = "hassha"
version = "0.1.0"
edition = "2024"
description = "Audio hook effects for Claude Code - Play Yamanote Line departure melodies on various events"
authors = ["Yesterday17"]
license = "MIT"
repository = "https://github.com/Yesterday17/hassha"
homepage = "https://github.com/Yesterday17/hassha"
documentation = "https://github.com/Yesterday17/hassha#readme"
readme = "README.md"
keywords = ["claude-code", "audio", "hooks", "yamanote", "plugin"]
categories = ["command-line-utilities", "multimedia::audio"]
exclude = [".github/*", "*.md", "!README.md"]

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP client for downloading audio
reqwest = { version = "0.12", features = ["blocking"] }

# Home directory detection
dirs = "5"

# Error handling
anyhow = "1"
thiserror = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1

[[bin]]
name = "hassha"
path = "src/main.rs"
